AC_INIT([riak-c-driver], [0.4.0])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(GLIB, glib-2.0)
PKG_CHECK_MODULES(PROTOBUFC, libprotobuf-c)
PKG_CHECK_MODULES(CURL, libcurl)
PKG_CHECK_MODULES(JSON, json)
AC_SUBST(GLIB_INCLUDES)
AC_SUBST(GLIB_LIBS)
AC_SUBST(PROTOBUFC_LIBS)
AC_SUBST(CURL_LIBS)
AC_SUBST(JSON_LIBS)

AC_CONFIG_FILES([
  Makefile
  riak-c-driver.pc
  riak-c-driver.spec
])
AC_OUTPUT
